--- a/client/package.json
+++ b/client/package.json
@@ -6,9 +6,14 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "query-string": "^7.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
+    "react-emoji": "^0.5.0",
+    "react-router-dom": "^6.3.0",
+    "react-scripts": "^2.1.3",
+    "react-scroll-to-bottom": "^4.2.0",
+    "socket.io-client": "^4.5.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
