--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,6 @@
     "react-dom": "^18.2.0",
     "react-emoji": "^0.5.0",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "^2.1.3",
     "react-scroll-to-bottom": "^4.2.0",
     "socket.io-client": "^4.5.1",
     "web-vitals": "^2.1.4"
@@ -39,5 +38,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-scripts": "^5.0.1"
   }
 }
