--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
+
 client/node_modules
+
 /node_modules
 /.pnp
 .pnp.js
@@ -10,7 +12,7 @@ client/node_modules
 /coverage
 
 # production
-/build
+client/build
 
 # misc
 .DS_Store
