--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "keywords": [],
   "author": "Yaniv Weinshtein",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "concurrently": "^7.2.2",
     "cors": "^2.8.5",
