--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "client": "npm start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "prebuild": "npm install",
-    "build": "cd ./client && npm install && npm run build",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
+    "build": "cd ./client && npm install && npm run build"
   },
   "keywords": [],
   "author": "Yaniv Weinshtein",
